Fixed thread actions on mobile running over viewport.

--- a/ISS/static-src/src/thread/thread.less
+++ b/ISS/static-src/src/thread/thread.less
@@ -25,23 +25,45 @@
 
     #post-actions {
       display: flex;
+      justify-content: stretch;
       align-items: stretch;
-
-      @media (min-width: @breakpoint) {
-        select {
-          margin-right: 5px;
-        }
-      }
+      height: 30px;
 
       input[type="submit"] {
-        .small-btn();
         .primary();
-        height: 30px;
+        border: none;
+        padding: 0 20px;
+
+        & when (@THEME = 'amoled') {
+          border: 1px solid @seperator_color_major;
+        }
       }
 
       select {
         flex: 1;
-        height: 30px;
+        margin-right: 5px;
+        border: 1px solid @seperator_color_major;
+      }
+
+      @media (max-width: @breakpoint) {
+        height: 40px;
+        border-width: 1px 0;
+        border-style: solid;
+        border-color: @seperator_color_major;
+
+        input[type="submit"] {
+          border-radius: 0;
+          margin: 0;
+          border-left: 1px solid @seperator_color_major;
+        }
+
+        select {
+          border: none;
+          background-color: @bg_dark;
+          border-radius: 0;
+          margin: 0;
+          width: 0;
+        }
       }
     }
     
